# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix  init.sh  opencode.json  treefmt.toml
.forgejo/: renovate.json
.github/: renovate.json
.github/workflows/: release.yaml
.zed/: settings.json
tests/: example_test.cpp
