cmake_minimum_required(VERSION 3.28)

project(cpp-template
  VERSION 0.1.0
  LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(main src/main.cpp)
set_target_properties(main PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

install(TARGETS main RUNTIME DESTINATION bin)
